# common

./: base-element.d.ts  base-element.js  base-element.js.map  deps-element.d.ts  deps-element.js  deps-element.js.map  index.d.ts  index.js  index.js.map  package.json  types.d.ts  types.js.map  utils.d.ts  utils.js  utils.js.map
.github/workflows/: main.yml
core-types/: capabilities.js  capabilities.js.map  common.js.map  dht-op.js.map  element.js.map  entry-details.js  entry-details.js.map  entry.d.ts  entry.js  entry.js.map  header.js.map  index.js  index.js.map  metadata.js.map  timestamp.d.ts  timestamp.js  timestamp.js.map
graphql/: resolvers.d.ts  resolvers.js  resolvers.js.map  schema.d.ts  schema.js  schema.js.map  types.d.ts  types.js.map
ui/: .eslintrc.js  package-lock.json  package.json
ui/demo/: index.html
ui/e2e/: graphql-middleware.test.js
ui/e2e/mocks/: schema.js  setupApolloClient.js
ui/src/: base-element.ts  context-container.ts  context-controller.ts  context-event.ts  context-provider-element.ts  context-provider.ts  deps-element.ts  index.ts  request-context.ts  sample-element.ts  store-element.ts  types.ts  utils.ts
ui/src/core-types/: entry.ts  index.ts  timestamp.ts
ui/src/graphql/: resolvers.ts  schema.ts  types.ts
zome/: Cargo.toml
zome/common.dna.workdir/: dna.json
zome/tests/: package.json
zome/tests/src/: index.ts
zome/zomes/common/: Cargo.toml
zome/zomes/common/src/: lib.rs
zome/zomes/test_util/: Cargo.toml
zome/zomes/test_util/src/: lib.rs
